Add Our Process Content

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
       <h4>Contact</h4>
     </nav>
 <div class="ourprocess">
+  <h2>Process</h2>
+  <h4>Identify</h4>
+  <p>We focus on the most important details</p>
+  <h4>Understand</h4>
+  <p>We study our projects indise and out</p>
+  <h4>Execute</h4>
+  <p>We put everything we have into our work</p>
+</div>
+<div class="designedny">
 
 </div>
-<div class="Designed in NY">
-
-</div>
-<div class="Footer">
+<div class="footer">
 
 </div>
   </body>
