Add Design NY Content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   <p>We put everything we have into our work</p>
 </div>
 <div class="designedny">
-
+  <h2>Portfolio</h2>
+  <p>Coming Soon</p>
+  <h2>Team</h2>
+  <p>We're Hiring</p>
+  <h2>Contact</h2>
+  <p>Phone: (555)-555-555</p>
+  <p>E-mail: test@example.com</p>
+  <p>Twitter: @test</p>
 </div>
 <div class="footer">
 
