--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
   <head>
     <title>Broadway Design</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <nav>
-      <h4>Home</h4>
-      <h4>About</h4>
-      <h4>Work</h4>
-      <h4>Team</h4>
-      <h4>Contact</h4>
+    <h1 class="maintitle">Broadway Design</h1>
+    <nav class="toplinks">
+      <a href="#">Home</a>
+      <a href="#">Process</a>
+      <a href="#">About</a>
+      <a href="#">Work</a>
+      <a href="#">Team</a>
     </nav>
-<div class="ourprocess">
-  <h2>Process</h2>
+<div class="Ourprocess">
+  <h2 class="process">Process</h2>
   <h4>Identify</h4>
   <p>We focus on the most important details</p>
   <h4>Understand</h4>
@@ -21,7 +22,8 @@
   <h4>Execute</h4>
   <p>We put everything we have into our work</p>
 </div>
-<div class="designedny">
+<div class="Designedny">
+  <h4 class="designny">Designed in New York</h4>
   <h2>Portfolio</h2>
   <p>Coming Soon</p>
   <h2>Team</h2>
@@ -31,8 +33,16 @@
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
 </div>
-<div class="footer">
-
+<div class="Bottom">
+  <nav class="footer">
+    <nav class="toplinks">
+      <p class="copyright">Broadway Design 2106
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Work</a>
+      <a href="#">Team</a>
+      <a href="#">Contact</a></p>
+  </nav>
 </div>
   </body>
 </html>
