--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
+<!-- Broadway Design-->
+
 <html>
   <head>
     <title>Broadway Design</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="maintitle">Broadway Design</h1>
-    <nav class="toplinks">
-      <a href="#">Home</a>
-      <a href="#">Process</a>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Team</a>
-    </nav>
-<div class="Ourprocess">
-  <h2 class="process">Process</h2>
+
+    <!-- header -->
+    <div class="banner">
+      <h1>Broadway Design</h1>
+
+    <!-- naviagation -->
+
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Process</a>
+        <a href="#">Work</a>
+        <a href="#">Team</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
+
+    <!-- about -->
+<div>
+  <h2 class="about">Process</h2>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
   <h4>Identify</h4>
   <p>We focus on the most important details</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
   <h4>Understand</h4>
-  <p>We study our projects indise and out</p>
+  <p>We study our projects inside and out</p>
+  <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
   <h4>Execute</h4>
   <p>We put everything we have into our work</p>
 </div>
-<div class="Designedny">
-  <h4 class="designny">Designed in New York</h4>
+
+
+    <!-- mid section -->
+<div class="midcontent">
+  <h4 class="mid">Designed in New York</h4>
   <h2>Portfolio</h2>
   <p>Coming Soon</p>
   <h2>Team</h2>
@@ -33,16 +50,16 @@
   <p>E-mail: test@example.com</p>
   <p>Twitter: @test</p>
 </div>
-<div class="Bottom">
-  <nav class="footer">
-    <nav class="toplinks">
-      <p class="copyright">Broadway Design 2106
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Team</a>
-      <a href="#">Contact</a></p>
-  </nav>
-</div>
+
+<!-- footer -->
+    <div class="footer">
+      <p>© Broadway 2017
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
