--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- naviagation -->
 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Process</a>
-        <a href="#">Work</a>
-        <a href="#">Team</a>
-        <a href="#">Contact</a>
+        <p><a href="#">Home</a></p>
+        <p><a href="#">Process</a>
+        <p><a href="#">Process</a>
+        <p><a href="#">Team</a>
+        <p><a href="#">Contact</a></p>
       </nav>
     </div>
 
